--- a/frontend/src/app/components/project/project-view/project-view.component.css
+++ b/frontend/src/app/components/project/project-view/project-view.component.css
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   justify-content: center;
+  margin-top: 2%;
 }
 mat-card-title {
   padding-top: 2%;
@@ -14,7 +15,7 @@ mat-card-title {
 }
 
 mat-card {
-  width: 80%;
+  width: 55%;
 }
 
 .row {
